gst/rtsp-sink/gstrtspclientsink.c
@@ -2006,7 +2006,10 @@ gst_rtsp_conninfo_close (GstRTSPClientSink * sink, GstRTSPConnInfo * info,
     /* free connection */
     GST_DEBUG_OBJECT (sink, "freeing connection...");
     gst_rtsp_connection_free (info->connection);
+    g_mutex_lock (&sink->preroll_lock);
     info->connection = NULL;
+    g_cond_broadcast (&sink->preroll_cond);
+    g_mutex_unlock (&sink->preroll_lock);
   }
   GST_RTSP_STATE_UNLOCK (sink);
   return GST_RTSP_OK;
@@ -3585,7 +3588,8 @@ gst_rtsp_client_sink_collect_streams (GstRTSPClientSink * sink)
 
   /* Now wait for the preroll of the rtp bin */
   g_mutex_lock (&sink->preroll_lock);
-  while (!sink->prerolled && !sink->conninfo.flushing) {
+  while (!sink->prerolled && sink->conninfo.connection
+      && !sink->conninfo.flushing) {
     GST_LOG_OBJECT (sink, "Waiting for preroll before continuing");
     g_cond_wait (&sink->preroll_cond, &sink->preroll_lock);
   }
